# ferris-search

./: Cargo.toml  Dockerfile  README.md  install.ps1  install.sh
.cargo-husky/hooks/: pre-commit
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
skills/ferris-search-cli/: SKILL.md
skills/ferris-search-cli/references/: cli-reference.md
skills/ferris-search-setup/: SKILL.md
skills/ferris-search-setup/references/: configuration.md
skills/ferris-search-tools/: SKILL.md
skills/ferris-search-tools/references/: tools-api.md
src/: cli.rs  config.rs  main.rs  types.rs
src/engines/: mod.rs
src/engines/baidu/: mod.rs  search.rs
src/engines/bing/: mod.rs  parser.rs
src/engines/brave/: mod.rs  search.rs
src/engines/csdn/: mod.rs  search.rs
src/engines/duckduckgo/: mod.rs  search.rs
src/engines/exa/: mod.rs  search.rs
src/engines/firecrawl/: mod.rs  search.rs
src/engines/github/: mod.rs  search.rs
src/engines/jina/: mod.rs  search.rs
src/engines/juejin/: mod.rs  search.rs
src/engines/linuxdo/: mod.rs  search.rs
src/engines/tavily/: mod.rs  search.rs
src/engines/zhihu/: mod.rs  search.rs
src/fetchers/: csdn.rs  github.rs  juejin.rs  linuxdo.rs  mod.rs  web.rs  zhihu.rs
src/index/: collector.rs  indexer.rs  mod.rs  schema.rs  searcher.rs
src/tools/: handlers.rs  helpers.rs  mod.rs  params.rs
src/utils/: http_client.rs  mod.rs  url_safety.rs
tests/: cli.rs
