[package]
name = "ferris-search"
version = "0.1.0"
edition = "2024"
description = "A blazing-fast MCP server for multi-engine web search, written in Rust"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.50", features = ["full"] }
rmcp = { version = "1.3", features = ["server", "transport-io", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = [
    "json",
    "gzip",
    "deflate",
    "brotli",
    "socks",
    "form",
    "query",
    "http2",
] }
scraper = "0.26"
axum = { version = "0.8", features = ["http2"] }
tower-http = { version = "0.6", features = ["cors"] }
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
lazy_static = "1"
urlencoding = "2.1"
regex = "1"
clap = { version = "4", features = ["derive"] }
tantivy = "0.22"
walkdir = "2"
pdf-extract = "0.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[target.'cfg(target_os = "linux")'.dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = [
    "user-hooks",
] }

[target.'cfg(target_os = "macos")'.dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = [
    "user-hooks",
] }
